# midi2gcode

./: Makefile  README.md  midi2gcode.cabal  midi2gcode.hs
MIDI/: GCode.hs  Notes.hs  Parser.hs  Time.hs
music/: africa.mid  caravan.mid  circus.mid  comptine.mid  mario.mid  mortal.mid  output.nc  smash.mid  toxic.mid  turret-opera.mid
test/: golden.nc  test.mid
