name:                midi2gcode
version:             0.0.1
synopsis:            CNC G-Code generator for MIDI files
description:         CNC G-Code generator for MIDI files
homepage:            https://homectl.org/midi2gcode
license:             GPL-3
license-file:        LICENSE
author:              pippijn
maintainer:          pippijn@users.noreply.github.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/homectl/midi2gcode

library
  default-language:    Haskell2010
  exposed-modules:
      MIDI.GCode
    , MIDI.Notes
    , MIDI.Parser
    , MIDI.Time
  ghc-options:
      -Wall
  build-depends:
      base              >= 4 && < 5
    , binary
    , bytestring
    , mtl

executable convert
  default-language: Haskell2010
  ghc-options:
      -Wall
  main-is: midi2gcode.hs
  build-depends:
      base < 5
    , bytestring
    , midi2gcode
